# projectA

./: CMakeLists.txt  README.md
Documentation/: InfoSheetDesign.txt  LetterTemplate.tex  tablestring.txt
Documentation/Detailed Design/: Bill.txt  BillProcessor.txt  InfoSheet.txt  InfoSheetParser.txt  LetterCreator.txt  Tenant.txt
Documentation/High-Level Design/: Bill.txt  BillProcessor.txt  InfoSheet.txt  InfoSheetParser.txt  LetterCreator.txt  Tenant.txt
include/TenantSettlement/: Bill.h  BillProcessor.h  CMakeLists.txt  InfoSheet.h  InfoSheetParser.h  LetterCreator.h  Tenant.h
src/: CMakeLists.txt  main.cpp
src/TenantSettlement/: Bill.cpp  BillProcessor.cpp  CMakeLists.txt  InfoSheet.cpp  InfoSheetParser.cpp  LetterCreator.cpp  Tenant.cpp
tests/TenantSettlement/: Bill_test.cpp  CMakeLists.txt
